# papelera_inteligente

./: .gitignore  CMakeLists.txt  README.md  README_TEST.md  main.c
pruebas_unitarias/: test_boton_alarma.c  test_led_blink.c  test_sensor_servo.c  test_sistema_completo.c
